# ansuman-gpu-inference-server

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: .gitkeep  20260529_0001_phase6_schema.py
backend/: __init__.py  main.py
backend/api/: deps.py
backend/core/: config.py  constants.py  errors.py  lifecycle.py  logging.py  request_context.py
backend/db/: clickhouse.py  postgres.py  redis.py  session.py
backend/middlewares/: __init__.py  access_log.py  auth.py  body_limit.py  error_handler.py  request_id.py  timing.py
backend/models/: api_key.py  batch_job.py  project.py  quota_policy.py  request_audit.py  user.py  webhook_config.py
backend/repositories/: api_key_repository.py  batch_job_repository.py  project_repository.py  quota_policy_repository.py  request_audit_repository.py
backend/schemas/: batch_job.py  chat_completion.py  common.py  error.py  metrics.py  model.py  usage.py
backend/scripts/: __init__.py  benchmark.py  create_api_key.py  create_clickhouse_tables.py  run_redis.py  run_vllm.py  smoke_test.py  wait_for_vllm.py
backend/utils/: env.py  hashing.py  ids.py  json.py  retries.py  time.py
backend/workers/: analytics_flusher.py  batch_worker.py  recovery_scanner.py
docs/: api-contract.md  architecture.md  clickhouse-connectivity.md  local-dev.md  plan.md  postgres-connectivity.md  testing-strategy.md  todo.md  vast-deployment.md
infra/: supervisord.conf
infra/cloudflared/: config.yml.example
infra/vast/: Dockerfile  README.md  (+8 more)
tests/: conftest.py
(+68 files in other folders)
