[project]
name = "gpu-inference-backend"
version = "0.1.0"
description = "GPU inference backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "clickhouse-connect>=0.8.0",
    "fastapi>=0.111.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.20.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "sqlalchemy>=2.0.18",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
